--- a/RecyclerView_OLD/app/src/main/res/values/strings.xml
+++ b/RecyclerView_OLD/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">வாழ்க யாதவம் !</string>
+    <string name="app_name">APP Name !</string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
@@ -8,7 +8,9 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="title_activity_load_fragment">வளர்க யாதவ புகழ்!</string>
-    <string name="title_activity_login">Yadhavaa</string>
-    <string name="title_activity_details">தொடர்புகள்</string>
+    <string name="title_activity_load_fragment">Good Luck!</string>
+    <string name="title_activity_login">Sample</string>
+    <string name="title_activity_details">Contacts</string>
+    <string name="title_activity_news_details">NewsDetails</string>
+    <string name="title_activity_html_content">HtmlContent</string>
 </resources>
